--- a/frontend/src/i18n/locales/th.json
+++ b/frontend/src/i18n/locales/th.json
@@ -4,6 +4,7 @@
     "error": "ข้อผิดพลาด",
     "success": "สำเร็จ",
     "save": "บันทึก",
+    "saving": "กำลังบันทึก...",
     "cancel": "ยกเลิก",
     "delete": "ลบ",
     "edit": "แก้ไข",
@@ -24,6 +25,7 @@
     "dashboard": "แดชบอร์ด",
     "menu": "จัดการเมนู",
     "orders": "จัดการออเดอร์",
+    "tables": "จัดการโต๊ะ",
     "restaurants": "ร้านอาหาร",
     "users": "ผู้ใช้",
     "reports": "รายงาน",
@@ -143,6 +145,7 @@
   },
   "orders": {
     "title": "จัดการออเดอร์",
+    "description": "จัดการออเดอร์ร้านอาหารและติดตามสถานะ",
     "newOrder": "ออเดอร์ใหม่",
     "orderNumber": "ออเดอร์ #",
     "tableNumber": "โต๊ะ",
@@ -152,11 +155,24 @@
     "price": "ราคา",
     "total": "รวม",
     "status": "สถานะ",
-    "createdAt": "สร้างเมื่อ",
+    "time": "เวลา",
     "actions": "การดำเนินการ",
+    "search_placeholder": "ค้นหาออเดอร์ ลูกค้า หรือรายการ...",
+    "all_statuses": "สถานะทั้งหมด",
+    "filter_by_status": "กรองตามสถานะ",
+    "view_details": "ดูรายละเอียด",
+    "mark_preparing": "ทำเครื่องหมายกำลังปรุง",
+    "mark_ready": "ทำเครื่องหมายพร้อมเสิร์ฟ",
+    "mark_served": "ทำเครื่องหมายเสิร์ฟแล้ว",
+    "print_receipt": "พิมพ์ใบเสร็จ",
+    "order_details": "รายละเอียดออเดอร์",
+    "order_instructions": "คำแนะนำออเดอร์",
+    "special_instructions": "คำแนะนำพิเศษ",
+    "table_number": "โต๊ะ {{number}}",
     "statuses": {
       "pending": "รอดำเนินการ",
-      "cooking": "กำลังปรุง",
+      "preparing": "กำลังปรุง",
+      "ready": "พร้อมเสิร์ฟ",
       "served": "เสิร์ฟแล้ว",
       "paid": "ชำระแล้ว",
       "cancelled": "ยกเลิก"
@@ -164,17 +180,36 @@
   },
   "restaurant": {
     "title": "ตั้งค่าร้านอาหาร",
-    "restaurantName": "ชื่อร้านอาหาร",
-    "restaurantNameEn": "ชื่อร้านอาหาร (ภาษาอังกฤษ)",
-    "restaurantNameTh": "ชื่อร้านอาหาร (ไทย)",
-    "address": "ที่อยู่",
-    "addressEn": "ที่อยู่ (ภาษาอังกฤษ)",
-    "addressTh": "ที่อยู่ (ไทย)",
-    "taxId": "เลขประจำตัวผู้เสียภาษี",
+    "setup": {
+      "title": "ตั้งค่าร้านอาหาร",
+      "description": "ตั้งค่าโปรไฟล์และข้อมูลร้านอาหารของคุณ",
+      "basic_info": "ข้อมูลพื้นฐาน",
+      "contact_info": "ข้อมูลติดต่อ",
+      "address": "ที่อยู่",
+      "business_hours": "เวลาทำการ",
+      "services_payment": "บริการและการชำระเงิน",
+      "services": "บริการ",
+      "payment_methods": "วิธีการชำระเงิน",
+      "save": "บันทึกร้านอาหาร",
+      "success": {
+        "title": "ตั้งค่าร้านอาหารเสร็จสิ้น!",
+        "message": "ร้านอาหารของคุณได้รับการตั้งค่าสำเร็จแล้ว คุณสามารถเริ่มจัดการเมนูและออเดอร์ได้แล้ว"
+      }
+    },
+    "name_th": "ชื่อร้านอาหาร (ไทย)",
+    "name_en": "ชื่อร้านอาหาร (ภาษาอังกฤษ)",
+    "address_th": "ที่อยู่ (ไทย)",
+    "address_en": "ที่อยู่ (ภาษาอังกฤษ)",
+    "tax_id": "เลขประจำตัวผู้เสียภาษี",
     "phone": "เบอร์โทรศัพท์",
     "email": "อีเมล",
-    "openingHours": "เวลาทำการ",
-    "cuisineType": "ประเภทอาหาร"
+    "cuisine_type": "ประเภทอาหาร",
+    "seating_capacity": "จำนวนที่นั่ง",
+    "select_cuisine": "เลือกประเภทอาหาร",
+    "closed": "ปิด",
+    "accepts_reservations": "รับจองโต๊ะ",
+    "has_delivery": "บริการส่งอาหาร",
+    "has_takeaway": "บริการซื้อกลับบ้าน"
   },
   "currency": {
     "thb": "บาท",
